--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -7,11 +7,14 @@
 #
 name: OpenWrt-CI
 
-# on:
-#   schedule:
-#     - cron: 0 20 * * *
-#   release:
-#     types: [published]
+on:
+  push:
+    branches: 
+      - master
+  # schedule:
+  #   - cron: 0 20 * * *
+  release:
+    types: [published]
 
 jobs:
 
